--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="play_button">Play</string>
-<string name="app_name">Puzzle</string>
-<string name="exit">Exit</string>
-<string name="moves_title">Moves: </string>
+    <string name="play_button">Play</string>
+    <string name="app_name">Puzzle</string>
+    <string name="exit">Exit</string>
+    <string name="moves_title">Moves: </string>
+    <string name="game_finished">You won!</string>
 </resources>
